--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <span class="us_uer"></span>
                                 <input name="logpass" id="password" class="text" style="color: #FFFFFF !important; position:absolute; z-index:100;"value="" type="password" placeholder="给你点提示:三个字的！">
                             </div>
-                            <div class="mb2"><a class="act-but submit" href="index.html" style="color: #FFFFFF" id="submit" onmousedown="myfunction()">登录</a></div>
+                            <div class="mb2"><a class="act-but submit"style="color: #FFFFFF" id="submit" onmousedown="myfunction()">登录</a></div>
                         <script> 
 							function myfunction()
 							{
