--- a/sr.html
+++ b/sr.html
@@ -133,6 +133,6 @@
 </HTML>
 	</head>
 	<body>
-		<p></p><a class="btn-0" href="add.html" title="点我返回">返回</a>
+		<p></p><a class="btn-0" href="zhu.html" title="点我返回">返回</a>
 	</body>
 </html>
