--- a/zhu.html
+++ b/zhu.html
@@ -44,7 +44,7 @@
 		   </li>
 		   <li class="list"><a href="#">等更新叭</a> 
 		      <ul class="items">
-		         <li> <a href="#" > Item 4-1 </a></li>
+		         <li> <a href="zpq.html" > 照片墙 </a></li>
 		         <li> <a href="#" > Item 4-2 </a></li>
 		         <li class="list"><a href="#">List 4-1</a> 
 		            <ul  class="items">
