--- a/zhu.html
+++ b/zhu.html
@@ -14,6 +14,7 @@
 </script>
 	<div class="htmleaf-container">
 		<header class="htmleaf-header">
+			<marquee align=# width=500><h7>忙于学习,我还会更新</h7></marquee>
 			<h1>朱靓炜 <span>头顶上的是个傻逼</span></h1>
 			<div class="htmleaf-links">
 				<a class="htmleaf-icon icon-htmleaf-home-outline" href="index.html" title="返回登录" target="_blank"><span> 登录界面</span></a>
