--- a/zhu.html
+++ b/zhu.html
@@ -64,11 +64,11 @@
 		</ul>
 		<div class="related">
 		    <h3>一起养养眼吗:</h3>
-		    <a href="http://www.htmleaf.com/jQuery/Accordion/201802244989.html">
+		    <a href="#">
 			  <img src="related/1.jpg" width="300" alt="emm"/>
 			  <h3>可还行？</h3>
 			</a>
-			<a href="http://www.htmleaf.com/css3/ui-design/201711234843.html">
+			<a href="#">
 			  <img src="related/2.jpg" width="300" alt="mm"/>
 			  <h3>再来一张</h3>
 			  <p><marquee align=# width=500><h3>闪现一下，我这该死的魅力</h3></marquee></p>
