--- a/zpq.html
+++ b/zpq.html
@@ -66,7 +66,7 @@
 			<a href="">
 			  <img src="related/17.jpg" width="300" alt="emm"/>
 			</a>
-			<h2>---------------------------------到底了!等我更新-------------------------------------</h2>
+			<h2>--------------到底了!等我更新--------------</h2>
 	</head>
 	<body>
 	</body>
