--- a/zpq.html
+++ b/zpq.html
@@ -66,6 +66,9 @@
 			<a href="">
 			  <img src="related/17.jpg" width="300" alt="emm"/>
 			</a>
+			<a href="">
+			  <img src="related/18.jpg" width="300" alt="emm"/>
+			</a>
 			<h2>--------------到底了!等我更新--------------</h2>
 	</head>
 	<body>
