--- a/zpq.html
+++ b/zpq.html
@@ -11,6 +11,9 @@
 			  <img src="related/3.gif" width="300" alt="emm"/>
 			</a>
 			<a href="">
+			  <img src="related/2.1.jpg" width="300" alt="emm"/>
+			</a>
+			<a href="">
 			<h5>主角来了:</h5>
 			  <img src="related/4.jpg" width="300" alt="emm"/>
 			</a>
