--- a/sr.html
+++ b/sr.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
+			朱靓炜同学的12进制的时钟</title>
 			<HTML>
-<HEAD><TITLE>朱靓炜同学</TITLE>
+<HEAD>
 		<style type="text/css">
 			 a{
 		text-decoration:none;
