--- a/zhu.html
+++ b/zhu.html
@@ -14,7 +14,7 @@
 </script>
 	<div class="htmleaf-container">
 		<header class="htmleaf-header">
-			<marquee align=# width=500><h7>忙于学习,我还会更新</h7></marquee>
+		<marquee align=# width=500><h7>忙于学习,我还会更新</h7></marquee>
 			<h1>朱靓炜 <span>头顶上的是个傻逼</span></h1>
 			<div class="htmleaf-links">
 				<a class="htmleaf-icon icon-htmleaf-home-outline" href="index.html" title="返回登录" target="_blank"><span> 登录界面</span></a>
@@ -32,7 +32,7 @@
 		   </li>
 		   <li class="list"><a href="#">惊喜</a> 
 		      <ul class="items">
-		         <li> <a href="sr.html" > 点我看看？ </a></li>
+		         <li> <a href="sr.html" > 点我 </a></li>
 		         <li> <a href="#" > 喜不喜欢 </a></li>
 		      </ul>
 		   </li>
@@ -43,10 +43,10 @@
 		         <li> <a href="#" > 我就只知道这两个 </a></li>
 		      </ul>
 		   </li>
-		   <li class="list"><a href="#">等更新叭</a> 
+		   <li class="list"><a href="#">(ง •_•)ง</a> 
 		      <ul class="items">
-		         <li> <a href="zpq.html" > 不起眼的照片墙 </a></li>
-		         <li> <a href="#" > Item 4-2 </a></li>
+		         <li> <a href="zpq.html" >不起眼的照片墙 </a></li>
+		         <li> <a href="ly.html" > 不起眼的留言板 </a></li>
 		         <li class="list"><a href="#">List 4-1</a> 
 		            <ul  class="items">
 		               <li> <a href="#" > Item 4-1-1</a></li>
@@ -64,19 +64,20 @@
 		</ul>
 		<div class="related">
 		    <h3>一起养养眼吗:</h3>
-		    <a href="#">
+		    <a href="">
 			  <img src="related/1.jpg" width="300" alt="emm"/>
-			  <h3>够嘛？</h3>
+			  <h3>可还行？</h3>
 			</a>
-			<a href="#">
+			<a href="">
 			  <img src="related/2.jpg" width="300" alt="mm"/>
 			  <h3>再来一张</h3>
 			  <p><marquee align=# width=500><h3>闪现一下，我这该死的魅力</h3></marquee></p>
 			</a>
 		</div>
 	</div>
-	
 	<script type="text/javascript">
+
+
 		var list = document.querySelectorAll('.list');
 
 		function accordion(e) {
@@ -98,5 +99,6 @@
 		    list[i].addEventListener('click', accordion);
 		}
 	</script>
+
 </body>
 </html>
