--- a/zhu.html
+++ b/zhu.html
@@ -47,9 +47,9 @@
 		      <ul class="items">
 		         <li> <a href="zpq.html" >不起眼的照片墙 </a></li>
 		         <li> <a href="ly.html" > 不起眼的留言板 </a></li>
-		         <li class="list"><a href="#">List 4-1</a> 
+		         <li class="list"><a href="#">比上面厉害一点点的东西</a> 
 		            <ul  class="items">
-		               <li> <a href="#" > Item 4-1-1</a></li>
+		               <li> <a href="liti.html" > 3D照片</a></li>
 		               <li> <a href="#" > Item 4-1-2</a></li>
 		               <li class="list"><a href="#">List 4-2</a> 
 		                  <ul  class="items">
