--- a/liti.html
+++ b/liti.html
@@ -22,7 +22,7 @@
 <div class="preloader" src="images/robocop-1987-wallpaper-2.jpg"></div>
 <div class="preloader" src="images/sJALsDXak4EehSg2F2y92rt5hPe.jpg"></div>
 <div id="wrapper">
-  <div id="nextBox">NEXT</div>
+  <div id="nextBox" href="zhu.html">下一张</div>
   <input type="range" min="35" max="395" value="35" id="range"/>
 </div>
   
