--- a/ly.html
+++ b/ly.html
@@ -150,7 +150,7 @@
           <div id="content">
               <div id="post">
                   <div style="background:#3EADC5 ;height:30px;">
-                      昵称：<input  =type="submit" id="shangtian" name="Submit3" style="border:none; background-color:#3EADC5; color:white;" value="不想当个匿名用户就点我改名呀" onclick="prom()" />
+                      昵称：<input  =type="submit" id="shangtian" name="Submit3" style="border:none; background-color:#3EADC5; color:white;" value="匿名用户,请注意语言文明" onclick="prom()" />
                       <input type="text" id="ritian" style="border:none; background-color:#3EADC5; color:white;"   onclick="prom()"/>
                       <!--disabled="disabled"-->
                   </div>
