--- a/zhu.html
+++ b/zhu.html
@@ -49,7 +49,7 @@
 		         <li> <a href="ly.html" > 不起眼的留言板 </a></li>
 		         <li class="list"><a href="#">比上面厉害一点点的东西</a> 
 		            <ul  class="items">
-		               <li> <a href="liti.html" > 3D照片(只限电脑)</a></li>
+		               <li> <a href="liti.html" > 3D照片</a></li>
 		               <li> <a href="#" > Item 4-1-2</a></li>
 		               <li class="list"><a href="#">List 4-2</a> 
 		                  <ul  class="items">
