--- a/liti.html
+++ b/liti.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>HTML5/CSS3 3D图片播放器DEMO演示</title>
+  <title>HTML5/CSS3 3D照片</title>
   
     <link rel="stylesheet" href="css/reset.min.css">
 
